--- a/irynadzyndra-web/src/app/components/header/header.component.html
+++ b/irynadzyndra-web/src/app/components/header/header.component.html
@@ -1,14 +1,13 @@
-<div class="name">
-  <pre >IRYDIY  ART  GALLERY</pre>
-</div>
+
 <div class="flex-container">
   <div>
-    <p><b>IRYNA</b></p>
+    <p><b>IRYNA DZYNDRA</b></p>
   </div>
-  <div class="irydij">
+<div class="irydiy">
+  <p>IRYDIY</p>
   </div>
   <div>
-    <p><b>DZYNDRA</b></p>
+    <p><b>ART GALLERY</b></p>
   </div>
 </div>
 <div class="container-navbar">
