--- a/irynadzyndra-web/src/app/components/header/header.component.html
+++ b/irynadzyndra-web/src/app/components/header/header.component.html
@@ -12,18 +12,18 @@
 </div>
 <div class="container-navbar">
   <ul class="container">
-    <li><a routerLinkActive="active" routerLink="home">{{pageData.allData?.hom}}</a></li>
-    <li class="dropdown">
+    <li><a routerLinkActive="active" (click)="hideDropdown()" routerLink="home">{{pageData.allData?.hom}}</a></li>
+    <li class="dropdown" (click)="dropdownEvent()">
       <a routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">{{pageData.allData?.gallery}}
-        <div class="dropdown-content">
+        <div class="dropdown-content" [ngClass]="showDropdown ? 'showDropdown' : ''">
           <a routerLinkActive="active" routerLink="gallery/terravita">{{pageData.allData?.terravita}}</a>
           <a routerLinkActive="active" routerLink="gallery/horizon">{{pageData.allData?.horizon}}</a>
           <a routerLinkActive="active" routerLink="gallery/seine">{{pageData.allData?.seine}}</a>
         </div>
       </a>
     </li>
-    <li><a routerLinkActive="active" routerLink="about">{{pageData.allData?.cv}}</a></li>
-    <li><a routerLinkActive="active" routerLink="contact">{{pageData.allData?.contact}}</a></li>
+    <li><a routerLinkActive="active" (click)="hideDropdown()" routerLink="about">{{pageData.allData?.cv}}</a></li>
+    <li><a routerLinkActive="active" (click)="hideDropdown()" routerLink="contact">{{pageData.allData?.contact}}</a></li>
   </ul>
 </div>
 
