added new joint

--- a/irynadzyndra-web/src/app/components/about/about.component.html
+++ b/irynadzyndra-web/src/app/components/about/about.component.html
@@ -34,6 +34,7 @@
       <li>{{pageData.allData?.Joint16}}</li>
       <li>{{pageData.allData?.Joint17}}</li>
       <li>{{pageData.allData?.Joint18}}</li>
+      <li>{{pageData.allData?.Joint19}}</li>
     </ul>
   </div>
 </div>
